tests/fail/semantics/unknown_struct_literal_field/main.kira
struct Point {
    let x: Int = 0
    let y: Int = 0
}

@Main
function entry() {
    let point = Point { x: 1 z: 2 }
    print(point.x)
    return
}
